# all-in

./: .gitignore  CLAUDE.md  README.md  TASKS-WEB.md  TASKS.md
cli/: README.md  pyproject.toml
cli/allin/: __init__.py  __main__.py  ai.py  boons.py  cards.py  engine.py  logger.py  player.py  ui.py  utils.py
cli/allin/modes/: __init__.py  hotseat.py  network.py  vs_ai.py
cli/tests/: test_boons.py  test_cards.py  test_engine.py  test_game_loop.py  test_player.py
data/: boons.json  cards.json
docs/: 01-game-overview.md  02-classes.md  03-cards.md  04-boons.md  05-game-flow.md  06-balance-notes.md  07-assets.md
web/: .env.example  .env.production  .gitignore  README.md  index.html  package-lock.json  package.json  partykit.json  tsconfig.json  vite.config.ts  vitest.config.ts  wrangler.toml
web/party/: server.ts
web/scripts/: smoke-battle.mjs  smoke-match.mjs  smoke-reroll.mjs  smoke-ws.mjs
web/src/: app.ts  main.ts  styles.css
web/src/engine/: card-exec.ts  data.ts  errors.ts  game.ts  index.ts  keywords.ts  player.ts  rng.ts  types.ts
web/src/net/: client.ts  identity.ts  protocol.ts  tournament-client.ts  tournament-protocol.ts
web/src/ui/: board.ts  lobby.ts  pick.ts  sceneStage.ts  waitroom.ts
web/src/ui/scenes/: boonDraft.ts  classPick.ts  classPickStyle.css  draftStyle.css  duel.ts  duelStyle.css  ending.ts  endingStyle.css  mainStyle.css  (+7 more)
web/tests/: bracket.test.ts  buffs.test.ts  data.test.ts  engine.test.ts  game.test.ts  player.test.ts
web/worker/: bracket.ts  index.ts  match-engine.ts  room.ts  tournament-room.ts  tsconfig.json
(+2 files in other folders)
