[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "allin"
version = "0.1.0"
description = "ALL-IN (Bloodbet) CLI prototype"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "ALL-IN" }]
dependencies = [
    "rich>=13.7.0",
    "prompt_toolkit>=3.0.43",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
allin = "allin.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["allin*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
